# Deploy_Tienkung_Pro

./: LICENSE  README.md  npz_to_yaml.py
rl_control_new/: CMakeLists.txt  README.md  package.xml  rlctrlnew_plugin.xml
rl_control_new/config/: joint_limits_tg30.yaml  refer.yaml  tg22_config.yaml  tg30_config.yaml
rl_control_new/config/policy/: policy.onnx  policy.pt  policy.xml
rl_control_new/config/policy_easy/: policy.onnx  policy.pt  policy.xml
rl_control_new/config/policy_jab/: policy.onnx
rl_control_new/config/policy_omni/: omni_movebox.onnx  omni_movebox_actions.onnx  omni_movebox_actions.xml  omni_ref_motion.npz
rl_control_new/config/urdf_folder/urdf/: tiangong2.0_pro_urdf.urdf
rl_control_new/launch/: rl.launch.py
rl_control_new/scripts/: compare_onnx_openvino.py  extract_onnx_action.py
rl_control_new/src/common/util/: LockFreeQueue.h
rl_control_new/src/plugins/JoyStick/include/: Joystick.h
rl_control_new/src/plugins/JoyStick/src/: Joystick.cpp
rl_control_new/src/plugins/p2s/include/: funcSPTrans.h
rl_control_new/src/plugins/p2s/lib/: libfuncSPTrans.so.1
rl_control_new/src/plugins/rl_control_new/include/: RLControlNewPlugin.h  bodyIdMap.h
rl_control_new/src/plugins/rl_control_new/src/: RLControlNewPlugin.cpp
rl_control_new/src/plugins/x_humanoid_rl_sdk/include/robot_FSM/: FSMState.h
x_humanoid_rl_sdk/: CMakeLists.txt  README.md  package.xml
x_humanoid_rl_sdk/include/robot_FSM/: BasicFunction.h  FSMStateImpl.h  RobotFSM.h
x_humanoid_rl_sdk/include/robot_interface/: RobotInterface.h
x_humanoid_rl_sdk/src/robot_FSM/: BasicFunction.cpp  FSMStateImpl copy.cpp  FSMStateImpl.cpp  FSMStateImpl_omni.cpp  RobotFSM.cpp
x_humanoid_rl_sdk/src/robot_interface/: RobotInterface.cpp
