<?xml version="1.0"?>
<package format="3">
  <name>x_humanoid_rl_sdk</name>
  <version>0.0.1</version>
  <description>RL humanoid SDK plugin for ROS2</description>
  <maintainer email="fulq@hust.edu.cn">flq</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>yaml-cpp</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>Eigen3</depend>
  <depend>bodyctrl_msgs</depend>
  <depend>pinocchio</depend>
    
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <!-- 如果有libtorch等第三方库，建议写在README或文档中 -->
</package>
